<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".ui.settings.SettingsFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/theme_selection"
        android:textAppearance="?attr/textAppearanceTitleLarge"
        android:textColor="?attr/colorPrimary" />

    <RadioGroup
        android:id="@+id/radio_group_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <RadioButton
            android:id="@+id/radio_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/theme_light"
            android:textAppearance="?attr/textAppearanceBodyLarge" />

        <RadioButton
            android:id="@+id/radio_dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/theme_dark"
            android:textAppearance="?attr/textAppearanceBodyLarge" />

        <RadioButton
            android:id="@+id/radio_system"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/theme_system"
            android:textAppearance="?attr/textAppearanceBodyLarge" />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/setting_pdf_quality"
        android:textAppearance="?attr/textAppearanceTitleLarge"
        android:textColor="?attr/colorPrimary" />

    <RadioGroup
        android:id="@+id/radio_group_quality"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <RadioButton
            android:id="@+id/radio_quality_low"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/quality_low" />

        <RadioButton
            android:id="@+id/radio_quality_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/quality_medium" />

        <RadioButton
            android:id="@+id/radio_quality_high"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/quality_high" />

    </RadioGroup>

</LinearLayout>
